fix:correct z-index for header

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ ul {
   background: white;
   border-radius: 50px;
   backdrop-filter: blur(12px);
+  z-index: 100;
 }
 
 .header-row{
